--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "knex": "^0.19.5",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
     "pg": "^7.4.0"
   },
