--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,5 +1,5 @@
-FROM postgres:12.4
+FROM postgres:10.3
 
-ADD /tables /docker-entrypoint-initdb.d/tables/
-
-ADD /deploy_schemas.sql /docker-entrypoint-initdb.d/
+ADD /tables/ /docker-entrypoint-initdb.d/tables/
+ADD /seed/ /docker-entrypoint-initdb.d/seed/
+ADD deploy_schemas.sql /docker-entrypoint-initdb.d/
